# aerin

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_commands.json  flake.nix
.build/: CMakeCache.txt  Makefile  cmake_install.cmake
.build/Aerin/: Makefile  cmake_install.cmake  libAerin.dylib
.build/Sandbox/: Makefile  Sandbox  cmake_install.cmake
.github/workflows/: codeql.yml
aerin/: CMakeLists.txt  aerin.h  aerin.hpp  app.cpp  app.h  pch.hpp
aerin/include/core/: app.h  app.hpp  window.h  window.hpp
aerin/include/core/ecs/: components.hpp  entity.hpp  registry.hpp
aerin/include/ecs/: component_array.hpp  components-array.hpp  components-manager.hpp  components.hpp  ecs.hpp  entity-manager.hpp  entity.hpp
aerin/include/math/: mat4.hpp  vec2.hpp  vec3.hpp
aerin/include/platform/macos/: macos_window.h  macos_window.hpp  window.hpp
aerin/include/platform/metal/: metal_renderer_api.h  metal_renderer_api.hpp
aerin/include/platform/opengl/: opengl_renderer_api.h  opengl_renderer_api.hpp
aerin/include/platform/wayland/: wayland_window.h  wayland_window.hpp  window.hpp
aerin/include/renderer/: renderer_api.h  renderer_api.hpp
aerin/src/core/: app.cpp  window.cpp
aerin/src/platform/macos/: macos_window.cpp  window.cpp
aerin/src/platform/metal/: metal_renderer_api.cpp
aerin/src/platform/opengl/: opengl_renderer_api.cpp
aerin/src/platform/wayland/: wayland_window.cpp  window.cpp
aerin/src/renderer/: renderer_api.cpp
ecs/: CMakeLists.txt
ecs/include/: entity.hpp  registry.hpp
editor/: CMakeLists.txt  app.cpp
engine/: CMakeLists.txt  test.cpp  test.h
sandbox/: CMakeLists.txt  app.cpp
tests/: CMakeLists.txt
tests/math/: mat4.cpp  vec2.cpp  vec3.cpp
